<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CriminalFragment">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crimeImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#A9A4A4"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/crimeButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/crime_title_label" />

            <EditText
                android:id="@+id/crimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/crime_title_hint" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/detailsText"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/detailsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/crimeDateBtn"
                style="@style/MyGrayBtn"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/crimeTimeBtn"
                style="@style/MyGrayBtn"
                android:layout_weight="1"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/crimeIsSolved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/crime_solved_label" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MyGrayBtn"
            android:id="@+id/suspectBtn"
            android:text="@string/suspect_text" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reportBtn"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/report_text"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MyGrayBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>
